k8s/03-service.yaml
# Deploymentをクラスタ内で公開するためのService
apiVersion: v1
kind: Service
metadata:
  name: wiz-app-service
spec:
  # type: ClusterIPがデフォルト。クラスタ内部からのみアクセス可能なIPを割り当てる
  type: ClusterIP
  selector:
    app: wiz-app # このラベルを持つPodにトラフィックを転送する
  ports:
  - protocol: TCP
    port: 80 # Serviceが公開するポート
    targetPort: 8080 # Pod内のコンテナがリッスンしているポート
